# game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  game_space.c  game_space.h  main.c  mdif.sh
demo-conf/: from_file_to_gif.conf  from_file_to_gif_random.conf  from_file_to_png.conf  from_file_to_png_random.conf  from_png_to_gif.conf  from_png_to_png.conf
docs/: dokumentacja_funkcjonalna.tex  raport.tex  sp_funkcjonalna.tex  specyfikacja_funkcjonalna.tex  specyfikacja_implementacyjna.tex
src/: game_configuration.c  game_configuration.h  game_functions.c  game_functions.h  game_space_display.c  game_space_display.h  game_space_management.c  game_space_management.h  game_space_structures.h  main.c
